<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSideActivities.OrderStatusActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_margin="20dp"
        android:background="@drawable/border_"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/waiting"
            android:textColor="@color/white"
            android:text="@string/waiting"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_status"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@color/grey"/>
        <Button
            android:id="@+id/finished"
            android:text="@string/finished"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_status"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@color/grey"/>

        <Button
            android:id="@+id/rejected"
            android:textColor="@color/white"
            android:text="@string/rejected"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_status"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/statusContainer"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>


</LinearLayout>